Implemented cart add book post operation, to clean up
