# controllers/Cart.js
@@ -20,11 +20,15 @@ module.exports.cartGET = function cartGET (req, res, next) {
 
 
 module.exports.cartAddBook = function cartAddBook (req, res, next) {
-  let cartId = req.session[cookie.uid];
-  if(cartId === undefined) {
-    cartId = 0 //with 0 get cart will return an empty json
+  var body = req.swagger.params['body'].value;
+  console.log("logging body for add cart")
+  console.log(body)
+
+  let userId = req.session[cookie.uid];
+  if(userId === undefined) {
+    userId = 0 //with 0 get cart will return an empty json
   }
-  Cart.cartAddBook(userId, cartId)
+  Cart.cartAddBook(userId, body.bookId, body.qty)
     .then(function (response) {
       utils.writeJson(res, response);
     })
